修改进行中

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     },
     "suggest": {
         "ext-pdo_mysql": "*",
+        "ext-mysqli": "*",
         "ext-redis": "*"
     },
     "autoload": {
